--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 @plugin "daisyui/theme" {
   name: "light";
   default: true;
-  --color-primary: #403F3F;
-  --color-secondary: #D72050;
+  --color-primary: #6d28d1;
+  --color-secondary: #20222f;
   --color-base-200: #F3F3F3;
   --color-base-300: #E7E7E7;
   --color-accent: #706f6f;
